2010-06-30  Jocelyn Turcotte  <jocelyn.turcotte@nokia.com>

Reviewed by Kenneth Rohde Christiansen.

        [Qt] Make sure we catch closed QComboBox popups.
        https://bugs.webkit.org/show_bug.cgi?id=39019

        The way it works currently is using the QComboBox::show/hidePopup
        virtual method to catch popup requests in the middle. There is
        some cases however that the popup widget gets closed without
        going through the hidePopup method.

        This patch adds an event filter to the popup's view to know when
        it gets closed and calls hidePopup to call our handling code.
        This may get hidePopup called twice but this shouldn't have any
        effect.

        * WebCoreSupport/QtFallbackWebPopup.cpp:
        (WebCore::QtFallbackWebPopupCombo::QtFallbackWebPopupCombo):
        (WebCore::QtFallbackWebPopupCombo::eventFilter):
        * WebCoreSupport/QtFallbackWebPopup.h:

Canonical link: https://commits.webkit.org/53149@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@62193 268f45cc-cd09-0410-ab3c-d52691b4dbfc